--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -93,7 +93,7 @@
               2nd Edition
             </span>
           </div>
-          <div id="main" data-pagefind-filter="category:{{ $section }}" data-pagefind-meta="category:Book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
+          <div id="main" data-pagefind-filter="category:book" data-pagefind-meta="category:Book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
             <h1>{{ .Params.book.section.cs_number }} {{ .Params.book.chapter.title }} - {{ .Params.book.section.title }}</h1>
             <div>
               {{ .Content }}
