--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,4 +16,5 @@
 <script src="{{ relURL "js/jquery.defaultvalue.js" }}"></script>
 <script src="{{ relURL "js/session.min.js" }}"></script>
 {{ if eq (.Scratch.Get "section") "search" }}<script src="{{ relURL "pagefind/pagefind-ui.js" }}"></script>{{ end }}
-<script src="{{ relURL "js/application.js" }}"></script>
+{{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . | resources.Minify }}
+<script src="{{ $js.RelPermalink }}"></script>
